@@ -1,5 +1,7 @@
 package progetto.type;
 
+import progetto.utils.FormattedLogs;
+import progetto.utils.OutputColor;
 import progetto.value.*;
 import java.util.ArrayList;
 
@@ -55,37 +57,27 @@ public enum ArrayType implements ExpType {
 
     @Override
     public boolean isCastable(ExpType type) {
-       return type instanceof ArrayType;
+        return type instanceof ArrayType;
     }
 
-    /*public static ArrayType fromValue(ExpValue<?> value) {
-        if (value instanceof ArrayIntValue)
-            return ArrayType.INT;
-        if (value instanceof ArrayDecValue)
-            return ArrayType.DEC;
-        if (value instanceof ArrayBoolValue)
-            return ArrayType.BOOL;
-        if (value instanceof ArrayStringValue)
-            return ArrayType.STRING;
-
-        return null;
-    }*/
+    @Override
+    public boolean isSafeCast(ExpType type) {
+        return isCompatible(type);
+    }
 
     public static ArrayType fromValue(ExpValue<?> value) {
 
-        //System.out.println("determino il tipo di  " + value.toString());
         if (!(value instanceof ArrayValue<?> arr)){
-            System.out.println("Il tipo di  " + value + " non e' arrayValue");
+            FormattedLogs.println(OutputColor.RED,"Il tipo di  " + value + " non e' arrayValue");
             return null;
         }
-        //System.out.println("Il tipo di  " + value + " e' arrayValue");
 
         ArrayList<?> list = arr.toJavaValue(); //
 
         if (list.isEmpty())
-            return null; // oppure un tipo "unknown"
+            return null;
 
-        Object first = list.get(0);
+        Object first = list.getFirst();
 
         if (first instanceof IntValue) return INT;
         if (first instanceof DecValue) return DEC;
@@ -96,7 +88,7 @@ public enum ArrayType implements ExpType {
         return null;
     }
     public static SimpleType toSimpleType(ArrayType type) {
-         return switch (type) {
+        return switch (type) {
             case INT -> SimpleType.INT;
             case DEC -> SimpleType.DEC;
             case BOOL -> SimpleType.BOOL;
